Fix IE alignment issue in the event title

--- a/app/assets/stylesheets/media-queries/320-up/_events.css.scss
+++ b/app/assets/stylesheets/media-queries/320-up/_events.css.scss
@@ -6,7 +6,7 @@ div.show-event {
   padding: 30px;
 
   div.event-header {
-    margin-top: -30px;
+    margin-top: -26px;
   }
 
   section.metadata {
