--- a/app/assets/stylesheets/views/events/_show.css.scss
+++ b/app/assets/stylesheets/views/events/_show.css.scss
@@ -3,6 +3,8 @@ div.show-event {
 
     ul.poll-actions {
       float: right;
+      margin-bottom: -50px;
+      margin-top: 10px;
 
       li {
         display: inline-block;
